Tables: Fixed pagination wrapping (fixes #5419)

--- a/src/base/bootstrap-overrides/_ie8.scss
+++ b/src/base/bootstrap-overrides/_ie8.scss
@@ -11,5 +11,22 @@
 				}
 			}
 		}
+
+		.pagination,
+		.pager {
+			> li {
+				> a,
+				> span {
+					cursor: hand;
+				}
+
+				&.active {
+					> a,
+					> span {
+						cursor: default;				
+					}
+				}
+			}
+		}
 	}
 }
